@@ -1,10 +1,10 @@
-from ._cftime import datetime, real_datetime, _parse_date
+from ._cftime import (datetime, real_datetime,
+                      _parse_date, _dateparse, _datesplit)
 from ._cftime import num2date, date2num, date2index, time2index, num2pydate
-from ._cftime import microsec_units, millisec_units, \
-                     sec_units, hr_units, day_units, min_units,\
-                     UNIT_CONVERSION_FACTORS
+from ._cftime import (microsec_units, millisec_units,
+                     sec_units, hr_units, day_units, min_units,
+                     UNIT_CONVERSION_FACTORS)
 from ._cftime import __version__
-# legacy functions in _cftime_legacy.pyx
-from ._cftime import DatetimeNoLeap, DatetimeAllLeap, Datetime360Day, DatetimeJulian, \
-                     DatetimeGregorian, DatetimeProlepticGregorian
-from ._cftime import utime, JulianDayFromDate, DateFromJulianDay
+from ._cftime import (DatetimeNoLeap, DatetimeAllLeap, Datetime360Day,
+                     Datetime360Day, DatetimeJulian, 
+                     DatetimeGregorian, DatetimeProlepticGregorian)
